welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:15: error: not found: value decelage
			setCouleurBrosse((T(j+decelage))%T.length)
                                              ^Array2:20: error: value % is not a member of java.awt.Color
		setCouleurBrosse((T(T.length-1)%T.length))
                                               ^