welcome.lessons.welcome.array.basics.Array2.scala.code
override def run() {
	var T = new Array[Color](getMondeHauteur)
	
	for (i <- 0 to T.length - 2) {
		T(i)=getCouleurSol()
		avance()
	}
	T(T.length-1)=getCouleurSol();
	
	for(i<-2 to getMondeLargeur()) {
		gauche()
		avance()
		droite()
		for (j <- 0 to T.length - 2) {
			setCouleurBrosse((T(j+decelage))%T.length)
			baisseBrosse()
			leveBrosse()
			avance()
		}
		setCouleurBrosse((T(T.length-1)%T.length))
	}

}
